2_doorman/1_corda_network_ns.yml
apiVersion: v1
kind: Namespace
metadata:
  name: maple-topazelite-corda-network
