2_doorman/5_service_doorman.yaml
apiVersion: v1
kind: Service
metadata:
  name: doorman-svc
  namespace: maple-topazelite-corda-network
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: doorman-app
